--- a/app/src/main/res/layout/fragment_card_post.xml
+++ b/app/src/main/res/layout/fragment_card_post.xml
@@ -110,7 +110,9 @@
     <ImageView
         android:id="@+id/attachmentImage"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        tools:src="@tools:sample/avatars[12]"
         android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintTop_toBottomOf="@id/barrierMiddle"
         app:layout_constraintBottom_toTopOf="@id/videoLinkText"
