--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -23,6 +23,9 @@
         <action
             android:id="@+id/action_mainFragment_to_cardPostFragment"
             app:destination="@id/cardPostFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_photoFragment2"
+            app:destination="@id/photoFragment2" />
     </fragment>
 
     <fragment
@@ -51,10 +54,17 @@
         <action
             android:id="@+id/action_cardPostFragment_to_editPostFragment"
             app:destination="@id/editPostFragment" />
+        <action
+            android:id="@+id/action_cardPostFragment_to_photoFragment2"
+            app:destination="@id/photoFragment2" />
     </fragment>
     <fragment
         android:id="@+id/errorFragment"
         android:name="ru.netology.nmedia.activity.ErrorFragment"
         android:label="fragment_error"
         tools:layout="@layout/fragment_error" />
+    <fragment
+        android:id="@+id/photoFragment2"
+        android:name="ru.netology.nmedia.activity.PhotoFragment"
+        android:label="PhotoFragment" />
 </navigation>
