--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -8,7 +8,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:background="@color/light_green"
         app:layout_constraintTop_toTopOf="parent"
