--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -26,6 +26,18 @@
         <action
             android:id="@+id/action_mainFragment_to_photoFragment2"
             app:destination="@id/photoFragment2" />
+        <action
+            android:id="@+id/action_mainFragment_to_signInFragment"
+            app:destination="@id/signInFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_dialogFragment"
+            app:destination="@id/dialogFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_dialogFragmentSignOut"
+            app:destination="@id/dialogFragmentSignOut" />
     </fragment>
 
     <fragment
@@ -67,4 +79,48 @@
         android:id="@+id/photoFragment2"
         android:name="ru.netology.nmedia.activity.PhotoFragment"
         android:label="PhotoFragment" />
+    <fragment
+        android:id="@+id/signInFragment"
+        android:name="ru.netology.nmedia.activity.SignInFragment"
+        android:label="fragment_sign_in"
+        tools:layout="@layout/fragment_sign_in" >
+        <action
+            android:id="@+id/action_signInFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/dialogFragment"
+        android:name="ru.netology.nmedia.activity.DialogFragmentSignIn"
+        android:label="fragment_dialog"
+        tools:layout="@layout/fragment_dialog_sign_in" >
+        <action
+            android:id="@+id/action_dialogFragment_to_signInFragment"
+            app:destination="@id/signInFragment" />
+        <action
+            android:id="@+id/action_dialogFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_dialogFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/dialogFragmentSignOut"
+        android:name="ru.netology.nmedia.activity.DialogFragmentSignOut"
+        android:label="fragment_dialog_sign_out"
+        tools:layout="@layout/fragment_dialog_sign_out" >
+        <action
+            android:id="@+id/action_dialogFragmentSignOut_to_mainFragment"
+            app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_dialogFragmentSignOut_to_cardPostFragment"
+            app:destination="@id/cardPostFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpFragment"
+        android:name="ru.netology.nmedia.activity.SignUpFragment"
+        android:label="SignUpFragment" >
+        <action
+            android:id="@+id/action_signUpFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+    </fragment>
 </navigation>
