--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -124,6 +124,7 @@
                 android:layout_marginVertical="@dimen/common_spacing"
                 android:background="@color/grey"
                 android:hint="@string/password"
+                android:inputType="textPassword"
                 android:padding="@dimen/common_spacing"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -137,6 +138,7 @@
                 android:layout_marginVertical="@dimen/common_spacing"
                 android:background="@color/grey"
                 android:hint="@string/confirm_your_password"
+                android:inputType="textPassword"
                 android:padding="@dimen/common_spacing"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
